--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <a href="http://50w.co" class="github-corner" aria-label="Check out 50w">
 <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#ffffff; position: absolute; top: 0; border: 0; left: 0; transform: scale(-1, 1);" aria-hidden="true">
-<path d="M0,0 L115,115 L142,142 L250,250 L250,0 Z"></path>
-<text class="w" x="0" y="-10" font-size="40" dy="0">
-    <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
-    <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
-    <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
-    <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
-    <tspan x="0"  dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
-    <tspan x="0"  dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
-</text>
+    <defs>  
+        <clipPath id="path-1">  
+            <path d="M0,0 L115,115 L142,142 L250,250 L250,0 Z"/>  
+        </clipPath>  
+    </defs>
+    <path d="M0,0 L115,115 L142,142 L250,250 L250,0 Z"></path>
+    <text class="w" x="0" y="-10" font-size="40" dy="0" clip-path="url(#path-1)">
+        <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
+        <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
+        <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
+        <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
+        <tspan x="0"  dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
+        <tspan x="0"  dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
+    </text>
 </svg>
 <style>
 
     .w { 
-        font: italic 40px sans-serif;
+        font: 40px sans-serif;
         fill:#FFFFFF;
     }
     .w:hover {
