Remove unused class refenrece, smol lint

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a href="http://50w.co" class="github-corner" aria-label="Check out 50w">
+<a href="http://50w.co" aria-label="Check out 50w">
 <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#ffffff; position: absolute; top: 0; border: 0; left: 0; transform: scale(-1, 1);" aria-hidden="true">
     <defs>  
         <clipPath id="path-1">  
@@ -11,12 +11,12 @@
         <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
         <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
         <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
-        <tspan x="0"  dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
-        <tspan x="0"  dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
+        <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
+        <tspan x="0" dy="40">wwwwwwwwwwwwwwwwwwwwwwwwww</tspan>
     </text>
 </svg>
-<style>
 
+<style>
     .w { 
         font: 40px sans-serif;
         fill:#FFFFFF;
@@ -25,7 +25,6 @@
         animation: shake 0.5s;
         animation-iteration-count: infinite;
     }
-
     @keyframes shake {
         0% { transform: translate(1px, 1px) rotate(0deg); }
         10% { transform: translate(-1px, -2px) rotate(-1deg); }
@@ -38,5 +37,6 @@
         80% { transform: translate(-1px, -1px) rotate(1deg); }
         90% { transform: translate(1px, 2px) rotate(0deg); }
         100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-</style></a>
+    }
+</style>
+</a>
